# Control_Engneering_Twice_Work_Python

./: .gitignore  2023控制工程基础个人作业题目.doc  TabView.py  core.py  draw.py  example.py  main.py  metric_caculate.py  pyproject.toml  readme.md  test.py  window.py  windows_setting.py  架构图.pptx
components/: Indicator.py  MyArgument.py  MyButton.py  MyCanvas.py  MyOrder.py  MySlider.py  MySliderBlock.py  Sin_Myorder.py  Sin_tab_frame.py  TabView.py  components.py  metric.py  tab_frame.py
tkinter/: pyproject.toml
