[tool.poetry]
name = "tkinter"
version = "0.1.0"
description = ""
authors = ["dream同学0 <10135984+o19859860010@user.noreply.gitee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
customtkinter = "^5.2.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
